--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -40,6 +44,8 @@
     "@types/jest": "^29.5.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.1",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.9",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
